# cppCourse

./: .gitignore  CMakeLists.txt  Doxyfile  MemoryWrapper_8hpp_source.html  MyAlloc_8hpp_source.html  MyVec_8hpp_source.html  README.md  annotated.html  classes.html  classhw3_1_1MemoryWrapper-members.html  classhw3_1_1MemoryWrapper.html  classhw3_1_1MyVec-members.html  classhw3_1_1MyVec.html  dir_199ba2410f0aec18f9e18c93a33489a8.html  dir_2b333b0bc2017b7e714c7cd1bddc9563.html  dir_72b19af0a7d3df7d30da018c649373fc.html  dir_f02f5abc8bd28429c3421f9004e0468f.html  files.html  graph_legend.html  hierarchy.html  hw1_8hpp_source.html  hw2_8hpp_source.html  hw3_8hpp_source.html  hw4_8hpp_source.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherit_graph_3.dot  inherit_graph_4.dot  inherit_graph_5.dot  inherits.html  main.cpp  md_README.html  pages.html  structhw3_1_1MyAlloc-members.html  structhw3_1_1MyAlloc.html  structhw3_1_1MyAlloc_1_1rebind-members.html  structhw3_1_1MyAlloc_1_1rebind.html  structhw4_1_1contain__c__str.html  (+10 more)
.github/workflows/: blank.yml  cmake-multi-platform.yml  doxygen.yml
HW1/: CMakeLists.txt  hw1.cpp  hw1.hpp  version.hpp
HW2/: CMakeLists.txt  hw2.cpp  hw2.hpp
HW3/: CMakeLists.txt  MemoryWrapper.hpp  MyAlloc.hpp  MyVec.hpp  hw3.cpp  hw3.hpp
HW4/: CMakeLists.txt  hw4.cpp  hw4.hpp
HW5/: CMakeLists.txt  Document.cpp  Document.hpp  MainWindow.cpp  MainWindow.hpp  Screen.cpp  Screen.hpp  hw5.cpp  hw5.hpp
HW5/Tools/: IBar.cpp  IBar.hpp  ToolBar.cpp  ToolBar.hpp
HW5/Tools/Primitives/: Color.cpp  Color.hpp  IPrimitive.cpp  IPrimitive.hpp  Line.cpp  Line.hpp  Oval.cpp  Oval.hpp  Rectangle.cpp  Rectangle.hpp
HW6/: CMakeLists.txt  Matrix.hpp  hw6.cpp  hw6.hpp
HW7/: BulkCommandHandler.cpp  BulkCommandHandler.hpp  CMakeLists.txt  Logger.cpp  Logger.hpp  hw7.cpp  hw7.hpp
HW8/: CMakeLists.txt  FileInfo.hpp  FileReader.cpp  FileReader.hpp  Options.hpp  README.md  hw8.cpp  hw8.hpp
cmake/: utils.cmake
search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  pages_0.js  searchdata.js
