cmake_minimum_required(VERSION 3.22)

# VERSION
if(NOT DEFINED MAJOR_VERSION)
    set(MAJOR_VERSION "1" CACHE INTERNAL "Major version")
endif(NOT DEFINED MAJOR_VERSION)

if(NOT DEFINED MINOR_VERSION)
    set(MINOR_VERSION "6" CACHE INTERNAL "Minor version")
endif(NOT DEFINED MINOR_VERSION)

if(NOT DEFINED PATCH_VERSION)
    set(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
endif(NOT DEFINED PATCH_VERSION)

set(PROJECT_VERSION ${MAJOR_VERSION}.${MINOR_VERSION}.${PATCH_VERSION})

# PROJECT
include(./cmake/utils.cmake)

set(CMAKE_CXX_STANDARD 20)

project(matrix VERSION ${PROJECT_VERSION})

add_executable(${PROJECT_NAME} main.cpp)

# ADDING HW's
# ADD_HW(1)
# ADD_HW(2)
# ADD_HW(3)
# ADD_HW(4)
# ADD_HW(5)
ADD_HW(6)

# DEB
install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)

set(CPACK_GENERATOR DEB)

set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")

set(CPACK_PACKAGE_CONTACT example@example.com)

include(CPack)
